# smriti

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  README.md  REPO_STRUCTURE.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_19_2114_393755616947_initial_tables.py  2026_03_19_2258_fab0a53299d6_add_memories_table_and_pgvector.py  2026_03_20_0014_c80fc0e31e4a_add_repo_commit_models.py  2026_03_20_1122_65900af1312b_add_chat_session_turn_event.py  2026_03_21_0046_8473b83ba7a7_make_repo_id_nullable.py  2026_03_21_1200_a1b2c3d4e5f6_add_fork_fields_to_chat_sessions.py  2026_04_04_2000_b3c4d5e6f7a8_add_assumptions_to_commits.py  2026_04_04_2100_c4d5e6f7a8b9_add_artifacts_to_commits.py  2026_04_11_1600_d5e6f7a8b9ca_add_project_root_to_commits.py  2026_04_12_2300_e6f7a8b9cadb_add_work_claims_table.py  2026_04_13_0100_f7a8b9cadbef_add_branch_disposition.py  2026_04_14_2000_a8b9cadbef01_add_task_id_to_work_claims.py  2026_05_04_0100_b9cadbef0102_add_work_trees_table.py  2026_05_04_0200_c0db5e90f1a2_add_worktree_id_to_work_claims.py  2026_05_04_0300_d1e2f3a4b5c6_add_project_root_to_repos.py
backend/app/: config.py  config_loader.py  main.py
backend/app/api/: deps.py
backend/app/db/: database.py  models.py
backend/app/domain/: enums.py  models.py
backend/app/providers/: anthropic_adapter.py  base.py  openai_adapter.py  openrouter_adapter.py  registry.py
backend/app/repositories/: context_pack_repo.py  session_repo.py
backend/app/schemas/: __init__.py
backend/app/services/: embedding.py  extractor.py  pack_generator.py  parser.py  worktree_probe.py
backend/config/: .gitignore  providers.example.yaml
backend/tests/: conftest.py
backend/tests/fixtures/: code_heavy_session.txt  coding_session.txt  debugging_session.txt  planning_session.txt  research_session.txt  unlabeled_session.txt
backend/tests/golden/: pack_chatgpt.json  pack_claude.json  pack_cursor.json  pack_generic.json  parser_code_heavy_session.json  parser_coding_session.json  parser_planning_session.json  parser_unlabeled_session.json
backend/tests/integration/: conftest.py  test_api_v2_git.py  test_api_v4_chat.py  test_api_v5_lineage.py  test_branch_disposition.py  test_checkpoint_extract.py  test_claim_worktree_binding.py  test_claims.py  test_delete_endpoints.py  test_health.py  test_metrics.py  test_multi_branch_state.py  (+5 more)
cli/: README.md  pyproject.toml
cli/smriti_cli/: __init__.py  __main__.py  client.py  formatters.py  main.py  mcp_server.py
cli/tests/: conftest.py  test_branch_close.py  test_init.py  test_mcp_server.py  test_skill_pack.py  test_smoke.py  test_space_cli.py  test_state_multi_branch.py  test_worktree_cli.py  test_worktree_mcp.py
(+57 files in other folders)
