[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smriti-cli"
version = "0.1.0"
description = "Command-line interface for Smriti, the reasoning-state backend for coding agents."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Himanshu Dongre" },
]
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.27.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
smriti = "smriti_cli.main:main"
smriti-mcp = "smriti_cli.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smriti_cli*"]

[tool.setuptools.package-data]
# Ship the skill pack source-of-truth template with the installed
# package so `smriti skills install` and `smriti_install_skill` can
# find it via __file__-relative path resolution.
smriti_cli = ["skill_pack/template.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
